// æ–‡ä»¶è¯´æ˜ï¼š
// æœ¬æ–‡ä»¶å®šä¹‰äº¤æ˜“æ± åŸºç¡€å®‰å…¨éªŒè¯å™¨ï¼ˆBasicTxValidatorï¼‰æ¥å£ä¸ç”Ÿäº§å®ç°ï¼Œ
// è´Ÿè´£äº¤æ˜“çš„æ ¼å¼/å“ˆå¸Œ/å¤§å°/é‡å¤/å†…å­˜ä¸Šé™ç­‰åŸºç¡€æ ¡éªŒï¼Œ
// æ˜ç¡®ä¸åŒ…å«ç­¾åã€ä½™é¢ã€UTXO ç­‰ä¸šåŠ¡éªŒè¯ï¼Œç¡®ä¿ TxPool ä»…æ‰¿æ‹…å­˜å‚¨ä¸åŸºç¡€å®‰å…¨èŒè´£ã€‚
package txpool

import (
	"context"
	"fmt"
	"sync"
	"time"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"google.golang.org/protobuf/proto"
)

// =========================================================================
// ğŸ›¡ï¸ åŸºç¡€éªŒè¯å™¨æ¥å£å®šä¹‰
// =========================================================================

// BasicTxValidator åŸºç¡€å®‰å…¨éªŒè¯å™¨æ¥å£ã€‚
// è¯´æ˜ï¼šä¸“æ³¨ç½‘ç»œå®‰å…¨é¢ï¼Œé¿å…ä¸ä¸šåŠ¡åŸŸè€¦åˆã€‚
// æ–¹æ³•è¦ç‚¹ï¼š
// - ValidateFormatï¼šæ ¼å¼å®Œæ•´æ€§ï¼›
// - ValidateHashï¼šä¸å“ˆå¸ŒæœåŠ¡ç»“æœä¸€è‡´æ€§ï¼›
// - ValidateSizeï¼šåŸºäºé…ç½®çš„å¤§å°é™åˆ¶ï¼›
// - ValidateDuplicateï¼šé‡å¤æ£€æµ‹ï¼›
// - ValidateMemoryLimitï¼šæŒ‰å­—èŠ‚æ ¡éªŒå†…å­˜ä¸Šé™ï¼›
// - UpdateMemoryUsage/GetValidationStats/Resetï¼šè¿è¡ŒçŠ¶æ€ç®¡ç†ã€‚
type BasicTxValidator interface {
	ValidateFormat(tx *transaction.Transaction) error
	ValidateHash(tx *transaction.Transaction, expectedHash []byte) error
	ValidateSize(tx *transaction.Transaction) error
	ValidateDuplicate(txHash []byte) error
	ValidateMemoryLimit(currentUsage, txSize uint64) error

	UpdateMemoryUsage(delta int64) error
	GetValidationStats() ValidationStats
	Reset() error
}

// ValidationStats éªŒè¯ç»Ÿè®¡ä¿¡æ¯ã€‚
// å­—æ®µï¼šå„ç±»éªŒè¯è®¡æ•°ã€æ‹’ç»è®¡æ•°ã€å¹³å‡è€—æ—¶ä¸æœ€è¿‘ä¸€æ¬¡æ—¶é—´æˆ³ã€‚
type ValidationStats struct {
	FormatValidations int64
	HashValidations   int64
	SizeValidations   int64
	DuplicateChecks   int64
	MemoryLimitChecks int64

	FormatRejections      int64
	HashRejections        int64
	SizeRejections        int64
	DuplicateRejections   int64
	MemoryLimitRejections int64

	AverageValidationTime time.Duration
	LastValidationTime    time.Time
}

// =========================================================================
// ğŸ­ ç”Ÿäº§çº§åŸºç¡€éªŒè¯å™¨å®ç°
// =========================================================================

// ProductionBasicValidator ç”Ÿäº§çº§åŸºç¡€éªŒè¯å™¨ã€‚
// å‚æ•°è¯´æ˜è§æ„é€ å‡½æ•°ï¼›å†…éƒ¨åŒ…å«å¹¶å‘å®‰å…¨ä¸ç»Ÿè®¡ä¿¡æ¯ã€‚
type ProductionBasicValidator struct {
	maxTxSize      uint64
	maxMemoryUsage uint64

	hashManager crypto.HashManager
	hashService transaction.TransactionHashServiceClient
	logger      log.Logger

	currentMemoryUsage uint64
	duplicateCache     map[string]time.Time
	stats              ValidationStats

	mu sync.RWMutex
}

// NewProductionBasicValidator åˆ›å»ºç”Ÿäº§çº§åŸºç¡€éªŒè¯å™¨ã€‚
// å‚æ•°ï¼š
// - maxTxSizeï¼šæœ€å¤§äº¤æ˜“å¤§å°ï¼ˆå­—èŠ‚ï¼‰ï¼›
// - maxMemoryUsageï¼šäº¤æ˜“æ± å…è®¸çš„æœ€å¤§å†…å­˜ä½¿ç”¨ï¼ˆå­—èŠ‚ï¼‰ï¼›
// - hashManagerï¼šå¯é€‰å“ˆå¸Œç®¡ç†å™¨ï¼ˆå¯ä¸º nilï¼‰ï¼›
// - hashServiceï¼šç»Ÿä¸€å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼›
// - loggerï¼šæ—¥å¿—æ¥å£ã€‚
// è¿”å›ï¼š*ProductionBasicValidatorã€‚
func NewProductionBasicValidator(
	maxTxSize uint64,
	maxMemoryUsage uint64,
	hashManager crypto.HashManager,
	hashService transaction.TransactionHashServiceClient,
	logger log.Logger,
) *ProductionBasicValidator {
	return &ProductionBasicValidator{
		maxTxSize:          maxTxSize,
		maxMemoryUsage:     maxMemoryUsage,
		hashManager:        hashManager,
		hashService:        hashService,
		logger:             logger,
		currentMemoryUsage: 0,
		duplicateCache:     make(map[string]time.Time),
		stats:              ValidationStats{},
	}
}

// =========================================================================
// ğŸ” åŸºç¡€å®‰å…¨éªŒè¯å®ç°
// =========================================================================

// ValidateFormat éªŒè¯äº¤æ˜“æ ¼å¼å®Œæ•´æ€§ã€‚
//
// ğŸ¯ **éªŒè¯èŒƒå›´**ï¼š
// - âœ… äº¤æ˜“éç©º
// - âœ… ç‰ˆæœ¬æœ‰æ•ˆ
// - âœ… è‡³å°‘æœ‰ä¸€ä¸ªè¾“å‡º
// - âœ… å¯åºåˆ—åŒ–
//
// ğŸ”§ **ç‰¹æ®Šäº¤æ˜“å¤„ç†**ï¼š
// ä»¥ä¸‹äº¤æ˜“ç±»å‹å…è®¸ `Inputs = []`ï¼ˆä¸æ¶ˆè´¹UTXOï¼‰ï¼š
// - Coinbaseäº¤æ˜“ï¼šçŸ¿å·¥å¥–åŠ±ï¼Œå‡­ç©ºäº§ç”Ÿèµ„äº§
// - Genesisäº¤æ˜“ï¼šåˆ›ä¸–åˆ†é…ï¼Œåˆå§‹èµ„äº§åˆ†é…
// - å…è´¹èµ„æºéƒ¨ç½²ï¼šå‡­ç©ºåˆ›å»ºèµ„æºUTXO
//
// å‚æ•°ï¼štx äº¤æ˜“ï¼›è¿”å›ï¼šerror éç©ºè¡¨ç¤ºå¤±è´¥ã€‚
func (v *ProductionBasicValidator) ValidateFormat(tx *transaction.Transaction) error {
	v.mu.Lock()
	defer v.mu.Unlock()
	start := time.Now()
	defer func() {
		v.stats.FormatValidations++
		v.stats.LastValidationTime = time.Now()
		v.updateAverageValidationTime(time.Since(start))
	}()
	if tx == nil {
		v.stats.FormatRejections++
		return fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}
	// Versionå¯ä»¥ä¸º0ï¼ˆprotobufé»˜è®¤å€¼ï¼‰ï¼Œä¸åšå¼ºåˆ¶æ ¡éªŒ
	// âœ… ç§»é™¤"è¾“å…¥ä¸èƒ½ä¸ºç©º"çš„æ£€æŸ¥
	// åŸå› ï¼šCoinbase/Genesis/å…è´¹èµ„æºéƒ¨ç½²ç­‰äº¤æ˜“å…è®¸ Inputs = []
	if len(tx.Outputs) == 0 {
		v.stats.FormatRejections++
		return fmt.Errorf("äº¤æ˜“è¾“å‡ºä¸èƒ½ä¸ºç©º")
	}
	if _, err := proto.Marshal(tx); err != nil {
		v.stats.FormatRejections++
		return fmt.Errorf("äº¤æ˜“åºåˆ—åŒ–å¤±è´¥: %w", err)
	}
	if v.logger != nil {
		if len(tx.Inputs) == 0 {
			v.logger.Debug("äº¤æ˜“æ ¼å¼éªŒè¯é€šè¿‡ï¼ˆæ— è¾“å…¥äº¤æ˜“ï¼šCoinbase/Genesis/å…è´¹èµ„æºéƒ¨ç½²ï¼‰")
		} else {
			v.logger.Debug("äº¤æ˜“æ ¼å¼éªŒè¯é€šè¿‡")
		}
	}
	return nil
}

// ValidateHash éªŒè¯äº¤æ˜“å“ˆå¸Œæ­£ç¡®æ€§ï¼ˆä¸å“ˆå¸ŒæœåŠ¡ç»“æœä¸€è‡´ï¼‰ã€‚
// å‚æ•°ï¼štx äº¤æ˜“ï¼›expectedHash æœŸæœ›å“ˆå¸Œï¼›è¿”å›ï¼šerrorã€‚
func (v *ProductionBasicValidator) ValidateHash(tx *transaction.Transaction, expectedHash []byte) error {
	v.mu.Lock()
	defer v.mu.Unlock()
	start := time.Now()
	defer func() { v.stats.HashValidations++; v.updateAverageValidationTime(time.Since(start)) }()
	if len(expectedHash) == 0 {
		v.stats.HashRejections++
		return fmt.Errorf("æœŸæœ›å“ˆå¸Œä¸èƒ½ä¸ºç©º")
	}
	req := &transaction.ComputeHashRequest{Transaction: tx, IncludeDebugInfo: false}
	resp, err := v.hashService.ComputeHash(context.Background(), req)
	if err != nil {
		v.stats.HashRejections++
		return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
	}
	if !resp.IsValid {
		v.stats.HashRejections++
		return fmt.Errorf("äº¤æ˜“å“ˆå¸Œè®¡ç®—æ— æ•ˆ")
	}
	if len(resp.Hash) != len(expectedHash) {
		v.stats.HashRejections++
		return fmt.Errorf("å“ˆå¸Œé•¿åº¦ä¸åŒ¹é…: è®¡ç®—=%d, æœŸæœ›=%d", len(resp.Hash), len(expectedHash))
	}
	for i := range resp.Hash {
		if resp.Hash[i] != expectedHash[i] {
			v.stats.HashRejections++
			return fmt.Errorf("å“ˆå¸Œå€¼ä¸åŒ¹é…")
		}
	}
	v.logger.Debug("äº¤æ˜“å“ˆå¸ŒéªŒè¯é€šè¿‡")
	return nil
}

// ValidateSize éªŒè¯äº¤æ˜“å¤§å°é™åˆ¶ã€‚
// å‚æ•°ï¼štx äº¤æ˜“ï¼›è¿”å›ï¼šerror è¶…é™æ—¶é”™è¯¯ã€‚
func (v *ProductionBasicValidator) ValidateSize(tx *transaction.Transaction) error {
	v.mu.Lock()
	defer v.mu.Unlock()
	start := time.Now()
	defer func() { v.stats.SizeValidations++; v.updateAverageValidationTime(time.Since(start)) }()
	txBytes, err := proto.Marshal(tx)
	if err != nil {
		v.stats.SizeRejections++
		return fmt.Errorf("æ— æ³•è®¡ç®—äº¤æ˜“å¤§å°: %w", err)
	}
	txSize := uint64(len(txBytes))
	if txSize > v.maxTxSize {
		v.stats.SizeRejections++
		return fmt.Errorf("äº¤æ˜“å¤§å°è¶…é™: %d > %d å­—èŠ‚", txSize, v.maxTxSize)
	}
	v.logger.Debug("äº¤æ˜“å¤§å°éªŒè¯é€šè¿‡")
	return nil
}

// ValidateDuplicate æ£€æµ‹é‡å¤äº¤æ˜“ã€‚
// å‚æ•°ï¼štxHash äº¤æ˜“å“ˆå¸Œï¼›è¿”å›ï¼šerror é‡å¤æ—¶é”™è¯¯ã€‚
func (v *ProductionBasicValidator) ValidateDuplicate(txHash []byte) error {
	v.mu.Lock()
	defer v.mu.Unlock()
	start := time.Now()
	defer func() { v.stats.DuplicateChecks++; v.updateAverageValidationTime(time.Since(start)) }()
	hashStr := fmt.Sprintf("%x", txHash)
	if lastSeen, exists := v.duplicateCache[hashStr]; exists {
		v.stats.DuplicateRejections++
		return fmt.Errorf("é‡å¤äº¤æ˜“æ£€æµ‹: ä¸Šæ¬¡è§äº %v", lastSeen)
	}
	v.duplicateCache[hashStr] = time.Now()
	v.cleanupExpiredDuplicates()
	v.logger.Debug("é‡å¤äº¤æ˜“æ£€æŸ¥é€šè¿‡")
	return nil
}

// ValidateMemoryLimit éªŒè¯å†…å­˜ä½¿ç”¨é™åˆ¶ã€‚
// å‚æ•°ï¼šcurrentUsage å½“å‰ä½¿ç”¨ï¼ˆå­—èŠ‚ï¼‰ï¼›txSize æœ¬æ¬¡æ–°å¢ï¼ˆå­—èŠ‚ï¼‰ã€‚è¿”å›ï¼šerror è¶…é™æ—¶æŠ¥é”™ã€‚
func (v *ProductionBasicValidator) ValidateMemoryLimit(currentUsage, txSize uint64) error {
	v.mu.Lock()
	defer v.mu.Unlock()
	start := time.Now()
	defer func() { v.stats.MemoryLimitChecks++; v.updateAverageValidationTime(time.Since(start)) }()
	projectedUsage := currentUsage + txSize
	if projectedUsage > v.maxMemoryUsage {
		v.stats.MemoryLimitRejections++
		return fmt.Errorf("å†…å­˜ä½¿ç”¨å°†è¶…é™: %d + %d > %d å­—èŠ‚", currentUsage, txSize, v.maxMemoryUsage)
	}
	v.logger.Debug("å†…å­˜é™åˆ¶éªŒè¯é€šè¿‡")
	return nil
}

// =========================================================================
// ğŸ”§ éªŒè¯å™¨ç®¡ç†æ–¹æ³•
// =========================================================================

// UpdateMemoryUsage æ›´æ–°å†…å­˜ä½¿ç”¨é‡ï¼ˆå¯ä¸æ± ä¾§è®¡æ•°é…åˆä½¿ç”¨ï¼‰ã€‚
func (v *ProductionBasicValidator) UpdateMemoryUsage(delta int64) error {
	v.mu.Lock()
	defer v.mu.Unlock()
	newUsage := int64(v.currentMemoryUsage) + delta
	if newUsage < 0 {
		newUsage = 0
	}
	v.currentMemoryUsage = uint64(newUsage)
	return nil
}

// GetValidationStats è·å–éªŒè¯ç»Ÿè®¡ä¿¡æ¯ï¼ˆçº¿ç¨‹å®‰å…¨å¿«ç…§ï¼‰ã€‚
func (v *ProductionBasicValidator) GetValidationStats() ValidationStats {
	v.mu.RLock()
	defer v.mu.RUnlock()
	return v.stats
}

// Reset é‡ç½®éªŒè¯å™¨çŠ¶æ€ï¼ˆæ¸…ç©ºç¼“å­˜ä¸ç»Ÿè®¡ï¼‰ã€‚
func (v *ProductionBasicValidator) Reset() error {
	v.mu.Lock()
	defer v.mu.Unlock()
	v.currentMemoryUsage = 0
	v.duplicateCache = make(map[string]time.Time)
	v.stats = ValidationStats{}
	v.logger.Info("åŸºç¡€éªŒè¯å™¨å·²é‡ç½®")
	return nil
}

// =========================================================================
// ğŸ”§ å†…éƒ¨è¾…åŠ©æ–¹æ³•
// =========================================================================

// updateAverageValidationTime æ›´æ–°å¹³å‡éªŒè¯æ—¶é—´ã€‚
func (v *ProductionBasicValidator) updateAverageValidationTime(duration time.Duration) {
	totalValidations := v.stats.FormatValidations + v.stats.HashValidations + v.stats.SizeValidations + v.stats.DuplicateChecks + v.stats.MemoryLimitChecks
	if totalValidations > 0 {
		currentTotal := v.stats.AverageValidationTime * time.Duration(totalValidations-1)
		v.stats.AverageValidationTime = (currentTotal + duration) / time.Duration(totalValidations)
	} else {
		v.stats.AverageValidationTime = duration
	}
}

// cleanupExpiredDuplicates æ¸…ç†è¿‡æœŸçš„é‡å¤äº¤æ˜“ç¼“å­˜ï¼ˆ>5åˆ†é’Ÿï¼‰ã€‚
func (v *ProductionBasicValidator) cleanupExpiredDuplicates() {
	expireTime := time.Now().Add(-5 * time.Minute)
	for hash, timestamp := range v.duplicateCache {
		if timestamp.Before(expireTime) {
			delete(v.duplicateCache, hash)
		}
	}
}
